Bug 116269 - FILEOPEN: RTF: Writer sets a left indent when it should be 0
Summary: FILEOPEN: RTF: Writer sets a left indent when it should be 0
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.1.0 target:6.0.4
Keywords: bibisected, bisected, filter:rtf, regression
Depends on:
Blocks: RTF-Bullet-Number-Lists
  Show dependency treegraph
 
Reported: 2018-03-07 14:41 UTC by Xisco Faulí
Modified: 2018-03-26 16:09 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
comparison MSO 2010 and LibreOffice 6.1 (72.65 KB, image/png)
2018-03-07 14:41 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-03-07 14:41:35 UTC
Created attachment 140434 [details]
comparison MSO 2010 and LibreOffice 6.1

Steps to reproduce:
1. Open attachment 85754 [details] from bug 69255

Observed behaviour: 1. numbering points should be 0 indentation whileas they're shifted to the right.

Reproduced in

Version: 6.1.0.0.alpha0+
Build ID: 16605d0cdc2c15ab4ae175531ba52824bf52bc70
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2018-03-07 14:43:24 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.co.uk>	2018-01-29 22:01:54 +0100
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2018-01-30 09:06:25 +0100
commit 7655001a65a250ea7cd70f2efcc78037b5a9813f (patch)
tree 7c2ff4a2b68625b4400ce454bae747fe70313c61
parent 671e67dfc24205a133dbbaf87bc7be9f3af56b3a (diff)
tdf#115155 RTF import: fix left indent handling inside list definition
This used to work in the past only because the left indent was also
imported as a direct paragraph formatting, but that is not the case
since left margin of lists is deduplicated during import after commit c9dee880d88305312094b311abdae155e452bf14 (tdf#104016 RTF import:
deduplicate before text indent from numbering, 2017-12-05).

Bisected with: bibisect-linux64-6.1

Adding Cc: to Miklos Vajna
Comment 2 Commit Notification 2018-03-20 08:07:25 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0f0a80123d970ef6f3f8269619813e5277fff4df

tdf#116269 RTF import: implement reverse deduplication for lists

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2018-03-20 12:24:50 UTC
Verified in

Version: 6.1.0.0.alpha0+
Build ID: 0f0a80123d970ef6f3f8269619813e5277fff4df
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 4 Commit Notification 2018-03-26 16:09:16 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=01d7bbdc13594965aad55269c1283716974ae743&h=libreoffice-6-0

tdf#116269 RTF import: implement reverse deduplication for lists

It will be available in 6.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.