tdf#116269 RTF import: implement reverse deduplication for lists

This is the same mechanism that was added in commit
1be0a3fa9ebb22b607c54b47739d4467acfed259 (n#825305: writerfilter RTF
import: override style properties like Word, 2014-06-17), except that
here the reference is a list definition, not a paragraph style.

Also, this commit only implements the part that inserts explicit
defaults for not repeated properties, not the actual deduplication, as
that already works at a dmapper level.

(Saving the bugdoc as DOCX, it's visible in document.xml that DOCX marks
these defaults explicitly:

<w:ind w:left="0" w:right="-6" w:firstLine="0"/>

but RTF does not, so the right place to fix this is in the tokenizer.)

Change-Id: Iec88d9bf1032d1d89194bd272500d6780c3c2224
Reviewed-on: https://gerrit.libreoffice.org/51589
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>